openshift/git-event-listener-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-git-event-listener
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: git-event-listener
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: el-git-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
